--- a/src/containers/Study/Study.scss
+++ b/src/containers/Study/Study.scss
@@ -1,3 +1,33 @@
+@import '../../styles/colors';
+
 .Study{
-    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    background: $mainColor;
+
+    & > div:nth-child(1){
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        width: 70%;
+        height: 150px;
+    }
+
+    & > div:nth-child(2){
+        display: flex;
+        flex-direction: column;
+        width: 70%;
+        margin-top: 50px;
+
+        & > div{
+            width: 100%;
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
+            margin-bottom: 20px;
+        }
+    }
 }
