--- a/src/containers/Study/Study.scss
+++ b/src/containers/Study/Study.scss
@@ -9,11 +9,23 @@
 
     & > div:nth-child(1){
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
+        flex-direction: column;
         width: 70%;
         height: 150px;
+
+        & > div{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-between;
+
+            & > div{
+                & > input{
+                    margin-right: 10px;
+                }
+            }
+        }
+
     }
 
     & > div:nth-child(2){
