--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -1,4 +1,5 @@
 @import '../../styles/colors';
+@import '../../styles/breakpoints';
 
 .Main{
     z-index: 1;
@@ -13,7 +14,13 @@
 
     & > span{
         font-weight: 500;
-        font-size: 42pt;
+        @media (min-width: $small) {
+            font-size: 42pt;
+        }
+
+        @media (max-width: $small) {
+            font-size: 22pt;
+        }
     }
 }
 
