--- a/src/containers/Exam/Exam.scss
+++ b/src/containers/Exam/Exam.scss
@@ -5,12 +5,12 @@
     flex-direction: row;
     justify-content: center;
     width: 100%;
-    // height: calc(100vh - 60px);
     background: $mainColor;
 
     & > ul{
         list-style: none;
         width: 70%;
+        padding: 0px;
 
         & > li{
             border-bottom: 1px solid #fff;
