--- a/src/containers/Voca/Voca.scss
+++ b/src/containers/Voca/Voca.scss
@@ -3,83 +3,92 @@
 
 .Voca{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    flex-direction: column;
     width: 100%;
     background: $mainColor;
 
-    & > ul{
-        list-style: none;
-        width: 70%;
-        padding: 0px;
-
-        & > li{
-            border-bottom: 1px solid #fff;
-            margin-bottom: 30px;
-
-            & > span{
-                display: flex;
-                @media (min-width: $small) {
-                    flex-direction: row;
-                    align-items: center;
-                    justify-content: space-between;
-                    align-items: center;
-                }
-
-                @media (max-width: $small) {
-                    flex-direction: column;
-                    align-items: left; 
-                }
+    & > h1{
+        margin-left: 15%;
+    }
     
-                & > h3{
-                    width: 160px;
-
-                    @media (max-width: $small) {
-                        margin-top: 10px;
-                        margin-bottom: 10px;
+    & > div{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        width: 100%;
+        & > ul{
+            list-style: none;
+            width: 70%;
+            padding: 0px;
+    
+            & > li{
+                border-bottom: 1px solid #fff;
+                margin-bottom: 30px;
+    
+                & > span{
+                    display: flex;
+                    @media (min-width: $small) {
+                        flex-direction: row;
+                        align-items: center;
+                        justify-content: space-between;
+                        align-items: center;
                     }
-
-                    & > a{
-                        text-decoration: none;
-                        color: #fff;
-                    }
-                }
-
-                & > div{
+    
                     @media (max-width: $small) {
-                        margin-bottom: 20px;
+                        flex-direction: column;
+                        align-items: left; 
+                    }
+        
+                    & > h3{
+                        width: 160px;
+    
+                        @media (max-width: $small) {
+                            margin-top: 10px;
+                            margin-bottom: 10px;
+                        }
+    
+                        & > a{
+                            text-decoration: none;
+                            color: #fff;
+                        }
+                    }
+    
+                    & > div{
+                        @media (max-width: $small) {
+                            margin-bottom: 20px;
+                        }
                     }
                 }
             }
         }
-    }
-
-    & > div{
-        display: flex;
-        flex-direction: row;
-        flex-flow: row wrap;
-
+    
         & > div{
             display: flex;
-            flex-direction: column;
-            color: #000;
-            width: 200px;
-            height: 200px;
-            background: $boxColor;
-            margin: 30px;
-            border-radius: 10px;
-            padding: 10px;
-
+            flex-direction: row;
+            flex-flow: row wrap;
+    
             & > div{
                 display: flex;
-                justify-content: center;
-                & > a{
-                    text-decoration: none;
-                    color: #000;
-                    text-align: center;
-                    border: 5px solid #000;
-                    border-radius: 5px;
-                    width: 100px;
+                flex-direction: column;
+                color: #000;
+                width: 200px;
+                height: 200px;
+                background: $boxColor;
+                margin: 30px;
+                border-radius: 10px;
+                padding: 10px;
+    
+                & > div{
+                    display: flex;
+                    justify-content: center;
+                    & > a{
+                        text-decoration: none;
+                        color: #000;
+                        text-align: center;
+                        border: 5px solid #000;
+                        border-radius: 5px;
+                        width: 100px;
+                    }
                 }
             }
         }
