--- a/src/containers/Main/Main.scss
+++ b/src/containers/Main/Main.scss
@@ -6,7 +6,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    width: 100vw;
     height: calc(100vh - 60px);
     background-color: rgba($mainColor, $alpha: 0.7);
     background-size: 100%;
@@ -28,6 +28,6 @@
     margin-top: -60px;
     position: absolute;
     z-index: -1;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
