--- a/src/containers/Test/Test.scss
+++ b/src/containers/Test/Test.scss
@@ -1,7 +1,7 @@
 @import '../../styles/colors';
 @import '../../styles/breakpoints';
 
-.Exam{
+.Test{
     display: flex;
     flex-direction: column;
     width: 100%;
