--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
-$mainColor: #FF6F61;
+$mainColor: #71ccde;
 $navColor: #fff;
 $transparency: rgba(255, 255, 255, 0);
 $boxColor: #fff;
+$black: #333333
