--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,25 +1,24 @@
 @import '../../styles/colors';
 @import '../../styles/breakpoints';
 
-.Color{
-    background: $mainColor;
-}
-
-.nonColor{
-    background-color: rgba($mainColor, $alpha: 0.7);
-}
-
 .Header{
     display: flex;
     flex-direction: row;
-    padding: 0px 20px;
-    height: 60px;
+    padding: 0px 58px;
+    height: 80px;
     justify-content: space-between;
     align-items: center;
 
     a{
-        color: $navColor;
         text-decoration: none;
+    }
+
+    & > h2{
+        font-family: 'InterparkGothicOTFB';
+        font-size: 32px;
+        & > a{
+            color: $mainColor;
+        }
     }
 
     & > ul{
@@ -28,6 +27,22 @@
         text-decoration: none;
 
         & > a{
+            color: $black;
+            display: list-item;
+            float: left;
+            font-weight: 500;
+
+            &:not(:first-child){
+                @media (min-width: $small) {
+                    margin-left: 20px;
+                }
+                @media (max-width: $small) {
+                    margin-left: 10px;
+                }
+            }
+        }
+
+        & > div{
             display: list-item;
             float: left;
 
@@ -37,6 +52,27 @@
                 }
                 @media (max-width: $small) {
                     margin-left: 10px;
+                }
+            }
+
+            & > div{
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+
+                & > a{
+                    display: list-item;
+                    float: left;
+                    font-weight: 500;
+                    color: $mainColor;
+                }
+
+                & > div{
+                    margin-top: 4px;
+                    width: 5px;
+                    height: 5px;
+                    background-color: $mainColor;
+                    border-radius: 3px;
                 }
             }
         }
