--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,10 @@
 @import url(https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css);
 
+@font-face{
+  font-family: 'InterparkGothicOTFB';
+  src:url('./assets/fonts/interparkFont/InterparkGothicOTFB.otf')
+}
+
 body {
   margin: 0;
   padding: 0;
